# cpp-test-harness

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
examples/: CMakeLists.txt  simple.cpp
include/: assertions.hpp  test.hpp
include/private/: assertions_impl.hpp  string_conversion.hpp  test_impl.hpp
include/public/: assertions.hpp  test.hpp
src/: assertions.cpp  main.cpp  test.cpp
