cmake_minimum_required(VERSION 3.14)
project(test_harness VERSION 0.1.0 LANGUAGES CXX)

set(CMAKE_C_STANDARD 11)
set(CMAKE_C_STANDARD_REQUIRED ON)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

option(TEST_MODE "Enable testing support" OFF)

if(TEST_MODE)
    set(TEST_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/src/main.cpp")
    add_library(test_harness STATIC ${TEST_SOURCES})
    target_include_directories(test_harness PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include/public)
    target_include_directories(test_harness PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include/private)
    target_compile_definitions(test_harness PUBLIC TEST_MODE main=app_main)
else()
    add_library(test_harness INTERFACE)
    target_include_directories(test_harness INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/include/public)
endif()

option(TEST_HARNESS_BUILD_EXAMPLES "Build example tests" OFF)
if(TEST_HARNESS_BUILD_EXAMPLES)
    add_subdirectory(examples)
endif()
